--- a/university/templates/university_search.html
+++ b/university/templates/university_search.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<title>大学格付けサーチ</title>
+    <title>大学格付けサーチ</title>
 </head>
 <body>
 <!--ここからメイン-->
@@ -12,34 +12,35 @@
 {% else %}
     <div class="main-content">
 {% endif %}
-    <h1>University Search</h1>
-    <form class="search-form" method="get">
-        <input class="search-input" type="text" name="query" value="{{ query }}" placeholder="企業名or大学格付け">
-        <button class="search-button btn btn-primary" type="submit">Search</button>
-    </form>
+<h1>University Search</h1>
+<form class="search-form" method="get">
+    <input class="search-input" type="text" name="query" value="{{ query }}" placeholder="企業名or大学格付け">
+    <button class="search-button btn btn-primary" type="submit">Search</button>
+</form>
 <div style="text-align: right; margin-right: 20px">
-    <a href="../">企業さんへ</a>
-    <a href="./high_school">高校さんへ</a>
+    <a href="../">企業さんへ</a><br>
+    <a href="./high_school">高校さんへ</a><br>
+    <a href="numberplate">ナンバープレートさんへ</a>
 </div>
-    <div class="search-results">
-        {% if universities %}
-            <h2>Search Results:</h2>
-            <table>
+<div class="search-results">
+    {% if universities %}
+        <h2>Search Results:</h2>
+        <table>
+            <tr>
+                <th><font color="#333333">企業名(職種)</font></th>
+                <th><font color="#333333">大学格付け</font></th>
+            </tr>
+            {% for university in universities %}
                 <tr>
-                    <th><font color="#333333">企業名(職種)</font></th>
-                    <th><font color="#333333">大学格付け</font></th>
+                    <td>{{ university.name }}</td>
+                    <td>{{ university.rank }}</td>
                 </tr>
-                {% for university in universities %}
-                    <tr>
-                        <td>{{ university.name }}</td>
-                        <td>{{ university.rank }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-        {% else %}
-            <p class="no-results">No results found.</p>
-        {% endif %}
-    </div>
+            {% endfor %}
+        </table>
+    {% else %}
+        <p class="no-results">No results found.</p>
+    {% endif %}
+</div>
 </div>
 
 {% if user_agent.device.family != 'iPhone' %}
@@ -52,9 +53,12 @@
         </button>
         <div class="collapse" id="account-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-                <li><a href="{% url 'corporation_quiz' %}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
-                <li><a href="{% url 'highschool:high_school_quiz' %}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
-                <li><a href="{% url 'university:university_quiz' %}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
+                <li><a href="{% url 'corporation_quiz' %}"
+                       class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
+                <li><a href="{% url 'highschool:high_school_quiz' %}"
+                       class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
+                <li><a href="{% url 'university:university_quiz' %}"
+                       class="link-body-emphasis d-inline-flex text-decoration-none rounded">大学さん</a></li>
             </ul>
         </div>
         <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
