--- a/numberplate/templates/numberplate_base.html
+++ b/numberplate/templates/numberplate_base.html
@@ -181,7 +181,7 @@
                     </button>
                     <div class="collapse" id="account-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
-                            <li><a href="{% url 'numberplate_quiz' %}"
+                            <li><a href="{% url 'corporation_quiz' %}"
                                    class="link-body-emphasis d-inline-flex text-decoration-none rounded">企業さん</a></li>
                             <li><a href="{% url 'highschool:high_school_quiz' %}"
                                    class="link-body-emphasis d-inline-flex text-decoration-none rounded">高校さん</a></li>
