--- a/highschool/templates/high_school_search.html
+++ b/highschool/templates/high_school_search.html
@@ -20,7 +20,8 @@
 <div style="text-align: right; margin-right: 20px">
     <a href="../">企業さんへ</a><br>
     <a href="./university">大学さんへ</a><br>
-    <a href="numberplate">ナンバープレートさんへ</a>
+    <a href="numberplate">ナンバープレートさんへ</a><br>
+    <a href="city_bus">市バスさんへ</a>
 </div>
 <div class="search-results">
     {% if high_schools %}
