--- a/corporation/templates/corporation_search.html
+++ b/corporation/templates/corporation_search.html
@@ -20,7 +20,8 @@
 <div style="text-align: right; margin-right: 20px">
     <a href="high_school">高校さんへ</a><br>
     <a href="university">大学さんへ</a><br>
-<a href="numberplate">ナンバープレートさんへ</a>
+<a href="numberplate">ナンバープレートさんへ</a><br>
+    <a href="city_bus">市バスさんへ</a>
 </div>
 <div class="search-results">
     {% if corporations %}
